# DiamondHacks

./: .env.example  .gitignore  README.md  index.html  navigator-README.md  nixpacks.toml  package-lock.json  package.json  run.sh  setup.sh
backend/: agent_runner.py  main.py  pyproject.toml  railway.json  simplifier.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ConfirmationModal.jsx  LandingPage.jsx  NarrationFeed.jsx  ResultCard.jsx  SimplifiedView.jsx  StatusDisplay.jsx  VoiceButton.jsx
navigator/backend/: agent_runner.py  main.py  pyproject.toml  simplifier.py
navigator/frontend/src/: App.jsx  index.css
navigator/frontend/src/components/: ConfirmationModal.jsx  LanguageSelector.jsx  NarrationFeed.jsx  StatusDisplay.jsx  VoiceButton.jsx
src/: PriceFinder.jsx  index.css  main.jsx
